force-app/main/default/objects/West_Target__c/West_Target__c.object-meta.xml
<CustomObject>
    <description>This Object will contain Opportunity information for the West Region</description>
    <label>West Target</label>
    <nameField>
        <label>West Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>west Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>