force-app/main/default/objects/West_Target__c/fields/CPE_NRC__c.field-meta.xml
<CustomField>
    <fullName>CPE_NRC__c</fullName>
    <label>CPE NRC</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>