force-app/main/default/objects/West_Target__c/fields/Net_New_MRR__c.field-meta.xml
<CustomField>
    <fullName>Net_New_MRR__c</fullName>
    <label>Net New MRR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>