force-app/main/default/objects/West_Target__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>