force-app/main/default/objects/West_Target__c/fields/Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager__c</fullName>
    <externalId>true</externalId>
    <label>Opportunity Owner: Manager</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>