force-app/main/default/objects/West_Target__c/fields/Total_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Amount__c</fullName>
    <label>Total Monthly Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>